--- a/assets/html/ankauf.html
+++ b/assets/html/ankauf.html
@@ -19,29 +19,32 @@
             <li><a href="home.html#home">HOME</a></li>
             <li><a href="../../index.html#new">BRANDNEU!</a></li>
             <li><a href="empfehlungen.html#empfehlungen">EMPFEHLUNGEN</a></li>
-            <li><a href="ankauf.html#ankauf">ANKAUF</a></li>
+            <li class="active">ANKAUF</li>
             <li><a href="wohnzimmer.html#wohnzimmer">WOHNZIMMER</a></li>
             <li><a href="kontakt.html#kontakt">KONTAKT</a></li>
         </ul>
     </nav>
     <main>
         <section>
-            <article>
+            <article class="home">
                 <div id="ankauf" class="sprunganker"></div>
                 <h2>ANKAUF</h2>
 
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et deserunt id nihil nostrum, dolorum odit
-                    quidem voluptas tempora non ab animi provident enim laboriosam quasi modi, fuga nemo ratione
-                    voluptates?
+                <p>Wir kaufen gut erhaltene Tonträger. Gerne auch ganze Sammlungen. Wir sind begeisterte Jäger und
+                    Sammler... immer auf der Suche nach einer Rarität, einem Schatz.
                 </p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et deserunt id nihil nostrum, dolorum odit
-                    quidem voluptas tempora non ab animi provident enim laboriosam quasi modi, fuga nemo ratione
-                    voluptates?
+                <p>Aber wir zahlen keine Mondpreise. Für eine CD, für die mal 30,- DM gezahlt wurde, zahlen wir je nach
+                    Zustand nur wenige Euros. Ja, das ist ärgerlich. Aber CDs haben sich einfach nicht als Wertanlage
+                    durchgesetzt. Spotify & Co. haben den Markt der physichen Tonträger obsolet gemacht.
                 </p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et deserunt id nihil nostrum, dolorum odit
-                    quidem voluptas tempora non ab animi provident enim laboriosam quasi modi, fuga nemo ratione
-                    voluptates?
+                <p>Du fragst Dich gearde natürlich zu Recht, warum Die Pallenkiste noch immer so sehr auf Vinyl und
+                    CompactDisc abfährt. Weil wir Musik-Nerds sind und weil wir Musik-Nerds bedienen wollen!
+                    Wir lieben es, uns ein Album-Cover ganz genau anzuschauen... das Booklet in der Hand zu halten und
+                    durchzublätter. Die Bilder zu entdecken, die Texte zu lesen und die Credits zu studieren. Wir lieben
+                    es, wenn der Tonarm
+                    sich auf die Scheibe senkt... das Knistern einsetzt, bevor die Musik ertönt.
                 </p>
+                <div class="center"><img src="../img/plattenbox.jpg" alt="Plattenkiste"></div>
                 </div>
             </article>
         </section>
