--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -16,7 +16,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="home.html#home">HOME</a></li>
+            <li class="active">HOME</li>
             <li><a href="../../index.html#new">BRANDNEU!</a></li>
             <li><a href="empfehlungen.html#empfehlungen">EMPFEHLUNGEN</a></li>
             <li><a href="ankauf.html#ankauf">ANKAUF</a></li>
@@ -50,7 +50,7 @@
                     Muskeln
                     zuckten... ich musste mich bewegen...
                     Mein Vater erhebte
-                    sich aus seinem Ohrensessel und kam zu mir und wir tobten. pogten... wir tanzten zu KISS 'Detroit
+                    sich aus seinem Ohrensessel und kam zu mir und wir tobten, pogten... wir tanzten zu KISS 'Detroit
                     Rock City' durchs heimische Wohnzimmer.</p>
                 <p>Ich war schockverliebt! Und diese Liebe zur Musik begleitet mich seit damals... 1976.
                 </p>
@@ -61,11 +61,11 @@
                     Plattenladen ein. Von Anfang an war DIE PLATTENKISTE als Liebhaberei konzipiert.
                     Meine Miete und
                     mein Butterbrot verdiene ich in einem ganz normalen Job. Seit 2004 bzw. 2006 unterstützen mich zwei
-                    Brüder im Geiste.</p>
+                    Brüder im Geiste: Tom und Jerry</p>
                 <p>
                     Wir führen Vinyl, CD, Filme (DVD und Blu-ray), Poster, Bücher und Magazine.
-                    Alle wichtigen Neuheiten finden Sie bei uns im Laden – aber vorab schon mal die Musik-Genres auf
-                    einem Blick.
+                    Alle wichtigen Neuheiten finden Sie bei uns vor Ort – aber vorab schon mal die Musik-Genres auf
+                    einem Blick:
                 </p>
 
                 <h5 class="home">MUSIK GENERES AUF VINYL UND COMPACT DISC</h5>
@@ -95,7 +95,7 @@
                 ​<div>
                     <ul>
                         <li>HÖRSPIELE</li>
-                        <li>HÖRBCHER</li>
+                        <li>HÖRBÜCHER</li>
                         <li>KINDER LIEDER</li>
                         <li>MÄRCHEN</li>
                     </ul>
@@ -114,7 +114,7 @@
                 </div>
 
 
-                <div><img src="../img/plattenbox.jpg" alt="Plattenkiste"></div>
+
 
                 </div>
             </article>
