--- a/assets/html/impressum.html
+++ b/assets/html/impressum.html
@@ -11,7 +11,7 @@
 
 <body>
     <header id="header">
-        <h1><a href="#">Die Plattenbox</a></h1>
+        <h1><a href="#">Die Plattenkiste</a></h1>
         <img src="../img/impressum.jpg" alt="Wohnzimmer Konzerte">
     </header>
     <nav>
@@ -26,24 +26,61 @@
     </nav>
     <main>
         <section>
-            <article>
+            <article class="impressum">
                 <div id="impressum" class="sprunganker"></div>
                 <h2>IMPRE§§UM</h2>
+                <p>Die Plattenkiste - eine Liebhaberei e.V.<br>
+                    Bakerstreet 19<br>
+                    4711 Rock City</p>
+                <p>Inhaltlich Verantwortlicher gemäß § 5 TMG: Scherzanwalt Dr. Alfred E. Neumann</p>
 
+                <h5>Haftungshinweis</h5>
+                <p>Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für
+                    die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber
+                    verantwortlich. Die Plattenkiste haftet nicht für den Inhalt der Veröffentlichungen der Nutzer; dies
+                    gilt
+                    insbesondere für Fälle, in denen die von Nutzern eingestellten Inhalte gegen das geistige Eigentum
+                    (Markenrechte, Urheberrechte, etc.) oder gegen das Persönlichkeitsrecht Dritter verstoßen. Dieser
+                    Haftungsausschluss gilt gleichermaßen für Inhalte von Internetseiten, welche von den Nutzern ohne
+                    Kenntnis von Plattenkiste verlinkt wurden. Die Plattenkiste übernimmt daher keine Gewähr für die
+                    Aktualität,
+                    Richtigkeit, Vollständigkeit oder Qualität der dort bereitgestellten Informationen und distanziert
+                    sich
+                    hiermit ausdrücklich von diesen Inhalten. Auch ist Die Plattenkiste eine andauernde inhaltliche
+                    Kontrolle
+                    der von Nutzern eingestellten Inhalte sowie der verlinkten fremden Seiten nicht möglich und ohne
+                    konkrete Anhaltspunkte einer Rechtsverletzung auch nicht zumutbar. Sobald Die Plattenkiste indes
+                    jugendgefährdende Inhalte oder Rechtsverletzungen bekannt werden sollten, werden derartige Inhalte
+                    unverzüglich entfernt.</p>
 
-                <h5> HAFTUNG FÜR LINKS:</h5>
-                <p>
-                    Hiermit distanzieren wir uns ausdrücklich von allen Inhalten aller gelinkten Seiten auf unserer
-                    Homepage und machen uns diese Inhalte nicht zu eigen. Diese Erklärung gilt für alle auf
-                    www.dieplattenkiste.de angebrachten Links. Wir übernehmen keinerlei Haftung für die hier angebotenen
-                    Informationen.
-                </p>
+                <h5>Urheberrecht</h5>
+                <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem
+                    deutschen
+                    Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb
+                    der
+                    Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw.
+                    Erstellers.
+                    Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.
+                    Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte
+                    Dritter beachtet.</p>
+
+                <h5>Außergerichtliche Streitbeilegung</h5>
+                <p>Die <a href="https://ec.europa.eu/consumers/odr/main/index.cfm?event=main.home.chooseLanguage"
+                        target="blank">Plattform der EU zur außergerichtlichen Online-Streitbeilegung</a> finden Sie
+                    hier.
+                    Unter dem folgenden Link finden Sie die <a
+                        href="https://ec.europa.eu/consumers/odr/main/index.cfm?event=main.home.chooseLanguage"
+                        target="blank">Kontaktdaten der offiziellen Streitbeilegungsstellen</a>.
+                    Die Plattenkiste ist weder bereit noch verpflichtet, an einem Streitbeilegungsverfahren vor einer
+                    Verbraucherschlichtungsstelle teilzunehmen.</p>
+                <h5>Datenschutzrichtlinien</h5>
+                <p>Wir speichern gar nichts. Jedenfalls nicht elektronisch. Aber wir freuen uns auf Deinen Besuch in Der
+                    Plattenkiste.
+                    Wenn Du dann einen bleibenden Eindruck hinterlässt, können wir es auch nicht ändern.</p>
                 </div>
             </article>
         </section>
     </main>
-
-
 
     <footer>
         <div class="footeraddress">
