--- a/assets/html/wohnzimmer.html
+++ b/assets/html/wohnzimmer.html
@@ -20,7 +20,7 @@
             <li><a href="../../index.html#new">BRANDNEU!</a></li>
             <li><a href="empfehlungen.html#empfehlungen">EMPFEHLUNGEN</a></li>
             <li><a href="ankauf.html#ankauf">ANKAUF</a></li>
-            <li><a href="wohnzimmer.html#wohnzimmer">WOHNZIMMER</a></li>
+            <li class="active">WOHNZIMMER</li>
             <li><a href="kontakt.html#kontakt">KONTAKT</a></li>
         </ul>
     </nav>
