--- a/assets/html/kontakt.html
+++ b/assets/html/kontakt.html
@@ -21,7 +21,7 @@
             <li><a href="empfehlungen.html#empfehlungen">EMPFEHLUNGEN</a></li>
             <li><a href="ankauf.html#ankauf">ANKAUF</a></li>
             <li><a href="wohnzimmer.html#wohnzimmer">WOHNZIMMER</a></li>
-            <li><a href="kontakt.html#kontakt">KONTAKT</a></li>
+            <li class="active">KONTAKT</li>
         </ul>
     </nav>
     <main>
